<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/colorDialogGridLayout"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:columnCount="2"
            android:useDefaultMargins="true">

    <TextView
        android:text="@string/label_alpha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/alphaTextView"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_gravity="right|center_vertical"/>

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/alphaSeekBar"
        android:layout_column="1"
        android:layout_row="0"
        android:layout_gravity="fill_horizontal"
        android:max="255"/>

    <TextView
        android:text="@string/label_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/redTextView"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_gravity="right|center_vertical"/>

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/redSeekBar"
        android:layout_column="1"
        android:layout_row="1"
        android:layout_gravity="fill_horizontal"
        android:max="255"/>

    <TextView
        android:text="@string/label_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/greenTextView"
        android:layout_column="0"
        android:layout_row="2"
        android:layout_gravity="right|center_vertical"/>

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/greenSeekBar"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:max="255"/>

    <TextView
        android:text="@string/label_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/blueTextView"
        android:layout_row="3"
        android:layout_column="0"
        />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/blueSeekBar"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:max="255"/>
    <View
        android:layout_width="wrap_content"
        android:layout_height="@dimen/color_view_height"
        android:id="@+id/colorView"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        />

</GridLayout>